fixed alignment bug

--- a/src/css/bulletin.css
+++ b/src/css/bulletin.css
@@ -3,8 +3,8 @@ div.scrollable_bulletin{
     width: 100%-10px;
     height: 110px;
     overflow: scroll;
-    border-radius: 5px;
-    padding: 7.5px 5px;
+    border-radius: 10px;
+    padding: 10px 10px;
     box-shadow:  1.5px 1.5px 2.5px royalblue inset;
     
 }
